# gokart-simulation

./: .editorconfig  .gitignore  README.md  gokart.humble.repos
joy_teleop/: README.md  package.xml  setup.py
joy_teleop/config/: joy_teleop.yaml
joy_teleop/joy_teleop/: joy_teleop_node.py
joy_teleop/launch/: joy_teleop.launch.py
key_teleop/: README.md  package.xml  setup.py
key_teleop/config/: key_teleop_node.yaml
key_teleop/key_teleop/: key_teleop_node.py
simulator/: CMakeLists.txt  README.md  package.xml
simulator/config/: simulation.yaml
simulator/env-hooks/: simulator.sh.in
simulator/launch/: gazebo.launch.py  simulation.launch.py  simulation_pennovation.launch.py
simulator/materials/scripts/: grass.material
simulator/meshes/: Cone.stl  cube.dae  cube.stl  track-svg-python.dae  track-svg-python.stl
simulator/meshes/cone/: model.sdf
simulator/meshes/track/: outside.dae
simulator/models/cone/: model.sdf
simulator/models/pennovation_track/: model.config
simulator/models/pennovation_track/gps_data/: left.csv  left_wall.csv  right.csv  right_wall.csv
simulator/models/pennovation_track/meshes/: inside.dae  outside.dae  track-svg-python.dae
simulator/models/purdue_racetrack/gps_data/: left.csv  purdue_right.csv  right.csv
simulator/models/purdue_racetrack/materials/scripts/: gokart.material
simulator/models/purdue_racetrack/meshes/: inside.dae  outside.dae  track-svg-python.dae
simulator/rviz/: demo.rviz
simulator/scripts/: convert_gnss_to_xyz.py  gen_racetrack.py  gen_racetrack_stl.py  send_map.py  spawn_cones.py  spawn_cones_pennovation.py
simulator/urdf/: ackermann.urdf  gokart.urdf
simulator/urdf/gokart/: _ackermann.urdf  _body_frame.urdf  _gnss.urdf  _wheels.urdf  main.urdf
simulator/worlds/: basic.world  pennovation_world.world  test_world.world
simulator_gazebo_plugin/: CMakeLists.txt  README.md  package.xml
simulator_gazebo_plugin/include/: simulator_gazebo_joint.hpp  simulator_gazebo_plugin.hpp  terminal.h
simulator_gazebo_plugin/src/: simulator_gazebo_plugin.cpp
simulator_msgs/: CMakeLists.txt  README.md  package.xml
simulator_msgs/msg/: ControlCommand.msg
teleop/: README.md  package.xml  setup.py
teleop/config/: teleop_node.yaml
teleop/teleop/: teleop_node.py
