<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simulator</name>
  <version>0.0.1</version>
  <description>A simulation environment for a go-kart race car with a LiDAR, a GNSS, and an IMU</description>
  <maintainer email="endlemar@fel.cvut.cz">Martin Endler</maintainer>
  <license>MIT License</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>hector_gazebo_plugins</exec_depend>
  <exec_depend>simulator_gazebo_plugin</exec_depend>
  <exec_depend>tf_transformations</exec_depend>
  <!-- maybe we don't need the following one -->
  <exec_depend>robot_localization</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!--
      see:
        https://github.com/ros-simulation/gazebo_ros_pkgs/wiki/ROS-2-Migration:-Gazebo-ROS-Paths
        https://github.com/ros-simulation/gazebo_ros_pkgs/blob/foxy/gazebo_ros/scripts/gazebo_ros_paths.py
        https://github.com/robotology/robotology-superbuild/issues/233
        https://gazebosim.org/tutorials?tut=components#EnvironmentVariables
    -->
    <gazebo_ros gazebo_model_path="${prefix}/models" />
    <gazebo_ros gazebo_media_path="${prefix}" />
  </export>
</package>
