<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>simulator_gazebo_plugin</name>
  <version>0.1.0</version>
  <description>
    Plugin to interact with the gokart Gazebo model
  </description>
  <maintainer email="sgvandijk@gmail.com">Sander G. van Dijk</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gazebo_ros</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>simulator_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros plugin_path="${prefix}" />
  </export>
</package>
